updated .jpg to .JPG in some images

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="card" style="width: 20rem;">
-                <img src="./images/itImage.jpg" class="card-img-top" alt="...">
+                <img src="./images/itImage.JPG" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Department of IT</h5>
                     <p class="card-text">
@@ -280,37 +280,37 @@
                         <img src="Gallery/gallery00.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery01.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery01.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery02.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery02.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery03.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery03.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery04.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery04.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery05.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery05.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery06.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery06.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery07.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery07.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery08.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery08.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery09.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery09.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery10.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery10.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="Gallery/gallery11.jpg" class="d-block w-100" alt="...">
+                        <img src="Gallery/gallery11.JPG" class="d-block w-100" alt="...">
                     </div>
                 </div>
 
@@ -373,7 +373,7 @@
         <h2>Development Team</h2>
         <div class="developers">
             <div class="developer">
-                <img class="profile-dev-img" src="profiles/vetri.jpg">
+                <img class="profile-dev-img" src="profiles/vetri.JPG">
                 <h3 style="text-align:center;">Vetrivel M</h3>
                 <p class="roles">Design and Development</p>
                 <div class="flex">
