--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <img class="home-image" src="./images/logo.png">
             <h1 class="vivid-title">VIVID 6.0</h1>
             <h3 class="vivid-tag">"Realise Your Creative Thoughts"</h3>
-            <h3 class="vivd-date">July 30, 2022</h3>
+            <h3 class="vivd-date">September 30, 2022</h3>
             <p class="vivid-text">
                 6th National Level Project Competition 
                 <br>
-                organized by Department of IT, SSN College of Engineering, Kalavakkam, Tamilnadu
+                organized by Department of IT, SSN College of Engineering, Kalavakkam, Tamil Nadu
             </p>
             <div style="display:flex;gap:2rem;">
                 <a class="btn btn-light" href="./VIVID 6.0.docx">Project Template</a>
@@ -104,7 +104,8 @@
                     <div class="card-body">
                       <h5 class="card-title">IOT</h5>
                       <p class="card-text">
-                        The Internet of Things describes physical objects with sensors, processing ability, software, and other technologies that connect and exchange data with other devices and systems over the Internet or other communications networks.
+                        The internet of things, or IoT, is a system of interrelated computing devices, mechanical and digital machines, objects, animals or people that are provided with unique identifiers (UIDs) and the ability to transfer data over a network without requiring human-to-human or human-to-computer interaction.
+                        A thing in the internet of things can be a person with a heart monitor implant, a farm animal with a biochip transponder, an automobile that has built-in sensors to alert the driver when tire pressure is low or any other natural or man-made object that can be assigned an Internet Protocol (IP) address and is able to transfer data over a network.
                       </p>
                     </div>
                   </div>
@@ -115,7 +116,8 @@
                     <div class="card-body">
                       <h5 class="card-title">AI and ML</h5>
                       <p class="card-text">
-                        Machine learning (ML) is a type of artificial intelligence (AI) that allows software applications to become more accurate at predicting outcomes without being explicitly programmed to do so. Machine learning algorithms use historical data as input to predict new output values.
+                        Artificial intelligence generally refers to processes and algorithms that are able to simulate human intelligence, including mimicking cognitive functions such as perception, learning and problem solving. Machine learning and deep learning (DL) are subsets of AI.
+                        Specific practical applications of AI include modern web search engines, personal assistant programs that understand spoken language, self-driving vehicles and recommendation engines, such as those used by Spotify and Netflix.
                       </p>
                     </div>
                   </div>
@@ -126,7 +128,8 @@
                     <div class="card-body">
                       <h5 class="card-title">Data Analytics</h5>
                       <p class="card-text">
-                        Analytics is the systematic computational analysis of data or statistics. It is used for the discovery, interpretation, and communication of meaningful patterns in data. It also entails applying data patterns toward effective decision-making
+                        Analytics is the systematic computational analysis of data or statistics. It is used for the discovery, interpretation, and communication of meaningful patterns in data. It also entails applying data patterns toward effective decision-making.
+                        Data analytics is a broad term that encompasses many diverse types of data analysis. Any type of information can be subjected to data analytics techniques to get insight that can be used to improve things. Data analytics techniques can reveal trends and metrics that would otherwise be lost in the mass of information.
                       </p>
                     </div>
                   </div>
@@ -137,7 +140,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Blockchain</h5>
                       <p class="card-text">
-                        Blockchain is a system of recording information in a way that makes it difficult or impossible to change, hack, or cheat the system. A blockchain is essentially a digital ledger of transactions that is duplicated and distributed across the entire network of computer systems on the blockchain.
+                        A blockchain is a distributed database or ledger that is shared among the nodes of a computer network. As a database, a blockchain stores information electronically in digital format. Blockchains are best known for their crucial role in cryptocurrency systems, such as Bitcoin, for maintaining a secure and decentralized record of transactions. The innovation with a blockchain is that it guarantees the fidelity and security of a record of data and generates trust without the need for a trusted third party.
                       </p>
                     </div>
                   </div>
@@ -151,7 +154,8 @@
                       <div class="card-body">
                         <h5 class="card-title">Cyber Security</h5>
                         <p class="card-text">
-                          Cybersecurity is the protection of internet-connected systems such as hardware, software and data from cyberthreats. The practice is used by individuals and enterprises to protect against unauthorized access to data centers and other computerized systems.
+                            Cybersecurity is the practice of protecting systems, networks, and programs from digital attacks. These cyberattacks are usually aimed at accessing, changing, or destroying sensitive information; extorting money from users; or interrupting normal business processes.<br>
+                            Implementing effective cybersecurity measures is particularly challenging today because there are more devices than people, and attackers are becoming more innovative.
                         </p>
                       </div>
                     </div>
@@ -166,25 +170,27 @@
         <div class="details-container">
             <div>
                 <img class="detail-img" src="./images/req.png" alt="..">
-                <h4>Conditions</h3>
+                <h4>Eligibility Criteria</h3>
                 <p>Participant must be only from <b>IT/CSE/ECE</b> field.<br>
                     Maximum of <b>3 members per team.</b><br>
-                    Registration <b>fee of ₹900</b> has to be paid only by the shortlisted teams.</p>
-            </div>
-            <div>
-                <img class="detail-img" src="./images/date.png" alt="..">
-                <h4 style="text-align: center;">Important Dates</h3>
-                <p>Event Date: 30 July 2022<br>
-                    Abstract submission deadline: 12 Jul 2022<br>
-                    <b>( mail to: vivid22@it.ssn.edu.in )</b><br>
-                    Selection Intimation: 19 July 2022
-                </p>
+                    Registration <b>fee of ₹500</b> has to be paid only by the shortlisted teams.</p>
             </div>
             <div>
                 <img class="detail-img" src="./images/prize.png" alt="..">
                 <h4>Rewards</h3>
                 <p>
-                    Exciting cash prizes for first, second, third winner and many more consolation prizes.
+                    First prize amount: <b>₹20,000</b><br>
+                    Second prize amount: <b>₹10,000</b><br>
+                    Third prize amount: <b>₹5000</b><br>    
+                </p>
+            </div>
+            <div>
+                <img class="detail-img" src="./images/date.png" alt="..">
+                <h4 style="text-align: center;">Important Dates</h3>
+                <p>Event Date: 30 September 2022<br>
+                    Abstract submission deadline: 31 August 2022<br>
+                    <b>( mail to: vivid22@it.ssn.edu.in )</b><br>
+                    Selection Intimation: 22 September 2022
                 </p>
             </div>
         </div>
@@ -210,12 +216,12 @@
 
             <tbody class="table-group-divider">
                 <tr>
-                    <td>Phase 1 Submission(Problem Statement)</td>
+                    <td>Phase 1: Submission(Problem Statement)</td>
                     <td>25-Jun-2022</td>
                     <td>12-Jul-2022</td>
                 </tr>
                 <tr>
-                    <td>Phase 1 Screening</td>
+                    <td>Phase 1: Screening</td>
                     <td>10-Jun-2022</td>
                     <td>17-Jul-2022</td>
                 </tr>
@@ -225,7 +231,7 @@
                     <td>19-Jul-2022</td>
                 </tr>
                 <tr>
-                    <td>Phase 2 Registration</td>
+                    <td>Phase 2: Registration</td>
                     <td>18-Jul-2022</td>
                     <td>25-Jul-2022</td>
                 </tr>
@@ -359,7 +365,7 @@
                     <p class="contact-number"><b>+91 99625 34272</b></p>
                 </div>
                 <div class="profile">
-                    <img class="profile-img faculty-img" src="profiles/RS.jpg">
+                    <img style="width: 11em;" class="profile-img faculty-img" src="profiles/RS.jpg">
                     <h3 style="text-align:center;"><b>Dr. R. Swathika</b><br>(Assistant Professor)</h3>
                     <p class="contact-number"><b>+91 99400 54862</b></p>
                 </div>
