--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
 			<p class="vivid-text">6<sup>th</sup> National Level Project Competition<br />
 				organized by Department of IT, SSN College of Engineering, Kalavakkam, Tamil Nadu</p>
 
-			<div style="display:flex;gap:2rem;"><a class="btn btn-light" href="./VIVID 6.0.docx">Project Template</a> <a
-					class="btn btn-light"
-					href="https://docs.google.com/forms/u/1/d/1nWONAdEpQa8brPEWR9JcOp3V5KbMwj2jx0rhYkY0IPI/edit?usp=forms_home&amp;ths=true"
-					target="_blank">Abstract Submission</a></div>
+			<div style="display:flex;gap:2rem;">
+                <a class="btn btn-light" href="#">View Shortlisted Candidates</a> 
+            </div>
 		</div>
 	</div>
 
@@ -186,7 +185,8 @@
 		<h2>Event Details</h2>
 
 		<div class="details-container">
-			<div><img alt=".." class="detail-img" src="./images/req.png" />
+			<div calss="detail-one">
+                <img alt=".." class="detail-img" src="./images/req.png" />
 				<h4>Eligibility Criteria</h4>
 
 				<p>Participant must be only from <b>IT/CSE/ECE</b> field.<br />
@@ -196,10 +196,11 @@
 				</p>
 			</div>
 
-			<div class="prizes-tab">
+			<div class="prizes-tab detail-two">
 				<div>
 					<img alt=".." class="detail-img" src="./images/prize.png" />
 					<h4>Rewards</h4>
+                    <p class="blink-small">NEW</p>
 				</div>
 
 				<div class="prize-div">
@@ -207,21 +208,27 @@
 						<h4>External Colleges</h4>
 						<div>
 							<p><b class="theme">Theme 1: Project / Demo</b></p>
-							<p> 1st Place: <b>₹ 30,000</b><br />
+							<p class="prizes-amt"> 
+                                1st Place: <b>₹ 30,000</b><br />
 								2nd Place: <b>₹ 20,000</b><br />
-								3rd Place: <b>₹ 10,000</b></p>
+								3rd Place: <b>₹ 10,000</b>
+                            </p>
 						</div>
 						<div>
-							<p><b class="theme">Theme 2: Ideation</b></p>
-							<p> 1st Place: <b>₹ 5,000</b><br />
+                            <p><b class="theme">Theme 2: Ideation</b></p>
+							<p class="prizes-amt"> 
+                                1st Place: <b>₹ 5,000</b><br />
+                            </p>
 						</div>
 						
 					</div>
 					<div>
 						<h4>In-House</h4>
-						<p>b class="theme">Theme 3: Project / Demo</b></p>
-						<p> 1st Place: <b>₹ 10,000</b>
-							<br>2nd Place: <b>₹ 5,000</b>			
+                        <p><b class="theme">Theme 3: Project / Demo</b></p>
+                        <p class="prizes-amt"> 
+                            1st Place: <b>₹ 10,000</b><br />
+                            2nd Place: <b>₹ 5,000</b><br />
+                        </p>			
 					</div>
 				</div>
 
@@ -229,7 +236,7 @@
 				
 			</div>
 
-			<div><img alt=".." class="detail-img" src="./images/date.png" />
+			<div class="detail-three"><img alt=".." class="detail-img" src="./images/date.png" />
 				<h4 style="text-align: center;">Important Dates</h4>
 
 				<p>Event Date: <font color="#0000ff"> 30 September 2022</font><br>
