--- a/index.html
+++ b/index.html
@@ -209,15 +209,15 @@
 						<div>
 							<p><b class="theme">Theme 1: Project / Demo</b></p>
 							<p class="prizes-amt"> 
-                                1st Place: <b>₹ 30,000</b><br />
-								2nd Place: <b>₹ 20,000</b><br />
-								3rd Place: <b>₹ 10,000</b>
+                                Winner: <b>₹ 30,000</b><br />
+								Runner Up: <b>₹ 20,000</b><br />
+								Third place: <b>₹ 10,000</b>
                             </p>
 						</div>
 						<div>
                             <p><b class="theme">Theme 2: Ideation</b></p>
 							<p class="prizes-amt"> 
-                                1st Place: <b>₹ 5,000</b><br />
+                                Winner: <b>₹ 5,000</b><br />
                             </p>
 						</div>
 						
@@ -226,8 +226,8 @@
 						<h4>In-House</h4>
                         <p><b class="theme">Theme 3: Project / Demo</b></p>
                         <p class="prizes-amt"> 
-                            1st Place: <b>₹ 10,000</b><br />
-                            2nd Place: <b>₹ 5,000</b><br />
+                            Winner: <b>₹ 10,000</b><br />
+                            Runner Up: <b>₹ 5,000</b><br />
                         </p>			
 					</div>
 				</div>
@@ -243,7 +243,6 @@
 					<s class="s">Abstract Extended submission deadline: </s></u>
 					<font color="#ff0000"> <b class="s">10 September 2022 </b></font><br />
 					<b>Submission Closed</b><br>
-					<b>( mail to: vivid22@it.ssn.edu.in )</b><br />
 					Selection Intimation: <font color="800000"> 22 September 2022</font>
 				</p>
 			</div>
@@ -295,11 +294,20 @@
 					<td>30-Sep-2022</td>
 					<td>30-Sep-2022</td>
 				</tr>
+                <tr>
+                    <td>Declaration of Shortlisted Candidates for Phase 3</td>
+                    <td>30-Sep-2022</td>
+                    <td>30-Sep-2022</td>
 				<tr>
 					<td>Phase 3: Power Judging</td>
 					<td>30-Sep-2022</td>
 					<td>30-Sep-2022</td>
 				</tr>
+                <tr>
+                    <td>Prize Distribution</td>
+                    <td>30-Sep-2022</td>
+                    <td>30-Sep-2022</td>
+                </tr>
 			</tbody>
 		</table>
 	</div>
