--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 							<p><b class="theme">Theme 1: Project / Demo</b></p>
 							<p class="prizes-amt"> 
                                 Winner: <b>₹ 30,000</b><br />
-								Runner Up: <b>₹ 20,000</b><br />
-								Third place: <b>₹ 10,000</b>
+								1st Runner Up: <b>₹ 20,000</b><br />
+								2nd Runner Up: <b>₹ 10,000</b>
                             </p>
 						</div>
 						<div>
