--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 
 <body>
 	<div class="primary-header flex">
-		<div class="logo-container"><a href="https://www.ssn.edu.in/" target="_blank"><img class="logo"
-					src="./images/ssnlogo.png" /> </a></div>
+		<div class="logo-container">
+			<a href="https://www.ssn.edu.in/" target="_blank">
+				<img class="logo" src="./images/ssnlogo.png" /> 
+			</a>
+			<a href="https://www.ssn.edu.in/" target="_blank">
+				<img src="./images/brand-logo-35.jpg" /> 
+			</a>
+		</div>
+
 		<button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle"><img class="ham"
 				src="./images/ham.png" /></button>
 
@@ -33,9 +40,11 @@
 	</div>
 
 	<div class="text home-image-bar" id="home">
-		<div class="home-content"><img class="home-image" src="./images/logo.png" />
+		<div class="home-content">
+			<img class="home-image" src="./images/logo.png" />
+			<h2 class="vivid-sponsor">M2P Solutions sponsors</h2>
 			<h1 class="vivid-title">VIVID 6.0</h1>
-			<h3 class="vivid-tag blink">Physical Mode !</h3>
+			<h3 class="vivid-tag blink">Physical Mode!</h3>
 			<h3 class="vivid-tag">&quot;Realise Your Creative Thoughts&quot;</h3>
 
 			<h3 class="vivd-date">September 30, 2022</h3>
@@ -44,7 +53,7 @@
 				organized by Department of IT, SSN College of Engineering, Kalavakkam, Tamil Nadu</p>
 
 			<div style="display:flex;gap:2rem;">
-                <a class="btn btn-light" href="#">View Shortlisted Candidates</a> 
+                <a class="btn btn-light" href="./Shortlist.pdf" filename="Shortlisted Teams for Phase 2 - Registration for VIVID 6.0">View Shortlisted Candidates</a> 
             </div>
 		</div>
 	</div>
@@ -314,7 +323,11 @@
 
 	<div class="text secondary-text" id="sponsers">
 		<h2 style="align-self: flex-start;">Sponsors</h2>
-		<img class="sponser-img" src="./images/sponser.png" />
+		<div class="sponsor-image-container">
+			<img class="sponser-img" src="./images/sponser.png" />
+			<img src="./images/brand-logo-35.jpg" />
+		</div>
+		
 	</div>
 
 	<div class="text secondary-text" id="gallery">
