--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 <body>
 	<div class="primary-header flex">
 		<div class="logo-container">
-			<a href="https://www.ssn.edu.in/" target="_blank">
 				<img class="logo" src="./images/ssnlogo.png" /> 
-			</a>
-			<a href="https://www.ssn.edu.in/" target="_blank">
-				<img src="./images/brand-logo-35.jpg" /> 
-			</a>
+
+				<img src="./images/brand-logo.svg" /> 
 		</div>
 
 		<button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle"><img class="ham"
