--- a/index.html
+++ b/index.html
@@ -238,8 +238,6 @@
 					</div>
 				</div>
 
-				
-				
 			</div>
 
 			<div class="detail-three"><img alt=".." class="detail-img" src="./images/date.png" />
@@ -249,7 +247,8 @@
 					<s class="s">Abstract Extended submission deadline: </s></u>
 					<font color="#ff0000"> <b class="s">10 September 2022 </b></font><br />
 					<b>Submission Closed</b><br>
-					Selection Intimation: <font color="800000"> 22 September 2022</font>
+					Selection Intimation: <font color="800000" class="s"> 22 September 2022</font><br>
+					<b>19 September 2022</b>
 				</p>
 			</div>
 		</div>
@@ -321,8 +320,8 @@
 	<div class="text secondary-text" id="sponsers">
 		<h2 style="align-self: flex-start;">Sponsors</h2>
 		<div class="sponsor-image-container">
-			<img class="sponser-img" src="./images/sponser.png" />
-			<img src="./images/brand-logo-35.jpg" />
+			<a href="https://www.ssn.edu.in/" target="_blank"><img class="sponser-img" src="./images/sponser.png" /></a>
+			<a href="https://m2pfintech.com/" target="_blank"><img src="./images/brand-logo-35.jpg" /></a>
 		</div>
 		
 	</div>
